src/objects/Agape_Program_Outcome_Tracker__c.object
<CustomObject>
    <fields>
        <fullName>Attendance_Code__c</fullName>
        <label>Attendance Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Attended</fullName>
                </value>
                <value>
                    <fullName>0 - Unexcused Absence</fullName>
                </value>
                <value>
                    <fullName>EX - Excused Absence</fullName>
                </value>
                <value>
                    <fullName>CX - Agape Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campaign_Member_Id__c</fullName>
        <label>Campaign Member Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Program Outcomes Tracker</relationshipLabel>
        <relationshipName>Program_Outcomes_Tracker</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Program Outcomes Tracker</relationshipLabel>
        <relationshipName>Program_Outcomes_Tracker</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Evaluation_Lesson_Plan_Activities__c</fullName>
        <label>Evaluation of Lesson Plan and Activities</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Goal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Goal</label>
        <referenceTo>Agape_Goal__c</referenceTo>
        <relationshipLabel>Program Outcomes Tracker</relationshipLabel>
        <relationshipName>Program_Outcomes_Tracker</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Instructor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Program Outcomes Tracker (Contact)</relationshipLabel>
        <relationshipName>Program_Outcomes_Tracker1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lesson__c</fullName>
        <label>Lesson</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Materials_Preparations__c</fullName>
        <label>Materials/Preparations</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Notes_Materials__c</fullName>
        <label>Notes/Reminders for Materials</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Notes_Reinforcement__c</fullName>
        <label>Notes/Reminders for Reinforcement</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Notes_Riding_Goals__c</fullName>
        <label>Notes/Reminders for Riding Goals</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Notes_Scoring_Specific_Objective__c</fullName>
        <label>Notes for Scoring Specific Objective</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Notes_Warm_up__c</fullName>
        <label>Notes/Remindersfor Warm-up</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Reinforcement_Activity__c</fullName>
        <label>Reinforcement Activity</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Riding_Skill__c</fullName>
        <label>Riding Skill</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <label>Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WarmUp_Activity__c</fullName>
        <label>Warm-Up Activity</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Program Outcome Tracker</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PO-{0000000000}</displayFormat>
        <label>Program Outcome Tracker Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Program Outcomes Tracker</pluralLabel>
    <recordTypes>
        <fullName>EFL_Partner</fullName>
        <active>true</active>
        <label>EFL Partner</label>
    </recordTypes>
    <recordTypes>
        <fullName>Therapeutic_Riding</fullName>
        <active>true</active>
        <label>Therapeutic Riding</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>